fix mobile menu, tab toggle, sidebar hide on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,15 @@ html, body
 	position: relative;
 }
 
-/*.photos {
-    max-width:20%;
-}*/
+
 
 body img {
   position: absolute;
   left:0;
   transition: opacity 1s ease-in-out;
-/*  max-width: 30%;
-  max-height: 50%;*/
 }
+
+
 
 .poemPage
 {
@@ -44,16 +42,14 @@ body img {
 }
 
 
+#aboutTab {text-align: justify}
 
-.arrows
-{
-	font-size: 50px;
-}
+
+
 
 #sidebar
 {
     top: 25%;
-/*    background-color: blue;*/
 	z-index: 3;
 }
 
@@ -80,7 +76,7 @@ a:active {color: #7b404b}
 	width: 100%;
 }
 
-#header
+.header
 {
 	width: 100%;
 
@@ -101,7 +97,7 @@ a:active {color: #7b404b}
 }
 
 
-/*Menu*/
+
 #menu
 {
 	height: 100%;
@@ -110,7 +106,7 @@ a:active {color: #7b404b}
 
 	z-index: 10;
 
-	top: 10%;
+	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
@@ -119,7 +115,7 @@ a:active {color: #7b404b}
 
 	background: #7b404b;
 
-	font-size: 30px;
+	font-size: 50px;
 	font-weight: bold;
 }
 
@@ -146,50 +142,28 @@ a:active {color: #7b404b}
 }
 
 
+
 /*For desktop*/
 @media all and (orientation:landscape)
 {
-	#header, #menu, #aboutTab
+	.header, #menu, #aboutTab
 	{
 		display: none;
 	}
 }
-
 
 
 
 /*For mobile*/
 @media all and (orientation:portrait)
 {
-	body
-	{
-		font-size: 14px;
-	}
-
 	.container
 	{
 		padding: 0px !important;
 	}
 
-	#sidebar, #menu, #aboutTab
+	#menu, #aboutTab
 	{
 		display: none;
 	}
-}
-
-
-
-/*	#textarea
-	{
-		top: 10%;
-		left: 0%;
-
-		padding: 10% 5% 10% 5%;
-	}*/
-
-/*	#poemsTab
-	{
-		col-12;
-	}*/
-
 }
